--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         
         </form>
     </div>
-		<p>ZAHRA</p>
+		<p>ZAHRA Kazmi</p>
     <div class="container bottom" id="answer">
     	<h2 class="invisible">Answer goes here</h2>
     </div>
